apps/bookstack/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  ports:
    - port: 80
      targetPort: bookstack
  selector:
    app.kubernetes.io/name: bookstack
