apps/bookstack/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookstack
spec:
  podSelector: {}
  egress: []
  ingress: []
